<resources>
    <string name="app_name">Event Tracker</string>
    <string name="save_event">Save Event</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="delete">Delete</string>
    <string name="add_event">Add event</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="confirm">Confirm</string>
    <string name="filter">filter</string>
    <string name="update_password">Update Password</string>
    <string name="no_events_yet">No events yet. Tap + to add one!</string>
</resources>